
2013-07-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Removed diffs between src/ and xsrc/ version of these files
	and moved them to the top-level: cff.h, spc_color.c, 
	spc_html.c, spc_util.[ch], tt_glyf.c, type0.c.

	* Reduced dvipdfmx/xdvipdfmx diffs in these files:
	cff.c, dvi.[ch], cidtype0.c, cidtype2.c, dvipdfmx.c, fontmap.c,
	pdfcolor.[ch], truetype.c, tt_aux.[ch], type1c.c.

2013-07-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Removed diffs between src/ and xsrc/ version of these files
	and moved them to the top-level: dpxfile.[ch], fontmap.h,
	jpegimage.h, pngimage.h, tt_cmap.h, type0.h, vf.c, xbb.h.

	* Reduced dvipdfmx/xdvipdfmx diffs in these files:
	src/cff_dict.c, (x)src/cidtype0.c, (x)src/cidtype2.c,
	(x)src/dvipdfmx.c, (x)src/jpegimage.c, src/pdfencrypt.c,
	src/pdfparse.c, src/pngimage.c, src/spc_html.c,
	(x)src/tt_cmap.c, (x)src/tt_table.c, src/xbb.c.

2013-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* data/Makefile.am, man/Makefile.am (removed): Merged into ...
	* Makefile.am: ... here.
	* configure.ac: Adapted.

2013-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* First '#include <config.h>' in all C files and not in headers.

2013-06-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/dvipdfmx.h, xsrc/spc_xtx.[ch]: Moved to the top-level.
	* Moved these files (identical in src/ and xsrc/) to the
	top-level: agl.[ch], bmpimage.h, cff_dict.h, cff_limits.h,
	cff_stdstr.h, cff_types.h, cid.[ch], cid_basefont.h, cid_p.h,
	cidtype0.h, cidtype2.h, cmap.[ch], cmap_p.h, cmap_read.[ch],
	cmap_write.[ch], cs_type2.[ch], dpxconf.[ch], dpxcrypt.[ch],
	dvicodes.h, mem.[ch], mfileio.[ch], mpost.h, numbers.[ch],
	otl_conf.[ch], otl_opt.[ch], pdfencoding.[ch], pdfencrypt.h,
	pdffont.[ch], pdflimits.h, pdfparse.h, pdfresource.[ch],
	pkfont.[ch], pst.[ch], pst_obj.[ch], sfnt.h, spc_color.h,
	spc_dvips.h, spc_html.h, spc_misc.[ch], spc_pdfm.h, spc_tpic.h,
	specials.h, subfont.[ch], system.h, t1_char.[ch], t1_load.[ch],